# aoc-agent

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  TODOS.md  benchmark.yaml  pyproject.toml  pyrightconfig.json  pytest.ini
configs/prime/: oss-smoke-eval.yaml  oss-smoke-rollout.yaml  qwen3-30b-a3b-aoc-real.toml  qwen3-30b-a3b-aoc-smoke.toml  qwen3-5-4b-aoc-real.toml  qwen3-5-4b-aoc-train-smoke.toml
docs/: rl.md
environments/aoc_prime_env/: README.md  pyproject.toml
environments/aoc_prime_env/aoc_prime_env/: __init__.py  aoc_prime_env.py  constants.py  dataset.py  models.py  parser.py  prompting.py  rewards.py
results/: README.md  anthropic--claude-opus-4.5--2022.jsonl  anthropic--claude-opus-4.5--2023.jsonl  anthropic--claude-sonnet-4.5--2022.jsonl  anthropic--claude-sonnet-4.5--2023.jsonl  bytedance-seed--seed-1.6-flash--2022.jsonl  bytedance-seed--seed-1.6-flash--2023.jsonl  deepseek--deepseek-v3.2--2023.jsonl  google--gemini-3-flash-preview--2022.jsonl  google--gemini-3-flash-preview--2023.jsonl  google--gemini-3-pro-preview--2022.jsonl  google--gemini-3-pro-preview--2023.jsonl  kwaipilot--kat-coder-pro--free--2022.jsonl  kwaipilot--kat-coder-pro--free--2023.jsonl  minimax--minimax-m2.1--2022.jsonl  minimax--minimax-m2.1--2023.jsonl  mistralai--devstral-2512--free--2022.jsonl  mistralai--devstral-2512--free--2023.jsonl  mistralai--mistral-large-2512--2022.jsonl  mistralai--mistral-large-2512--2023.jsonl  moonshotai--kimi-k2-thinking--2022.jsonl  moonshotai--kimi-k2-thinking--2023.jsonl  moonshotai--kimi-k2.5--2022.jsonl  moonshotai--kimi-k2.5--2023.jsonl  nvidia--nemotron-3-nano-30b-a3b--free--2022.jsonl  nvidia--nemotron-3-nano-30b-a3b--free--2023.jsonl  openai--gpt-5.1-codex-mini--2022.jsonl  openai--gpt-5.1-codex-mini--2023.jsonl  openai--gpt-5.2-codex--2022.jsonl  openai--gpt-5.2-codex--2023.jsonl  results.jsonl  x-ai--grok-4.1-fast--2022.jsonl  x-ai--grok-4.1-fast--2023.jsonl  x-ai--grok-code-fast-1--2022.jsonl  x-ai--grok-code-fast-1--2023.jsonl  xiaomi--mimo-v2-flash--free--2022.jsonl  xiaomi--mimo-v2-flash--free--2023.jsonl  z-ai--glm-4.7--2022.jsonl  z-ai--glm-4.7--2023.jsonl
src/aoc_agent/: agent.py  cli.py  prime_cli.py  prime_dataset.py  solver.py
src/aoc_agent/adapters/: auth.py  model_factory.py  model_types.py  models.py  (+1 more)
src/aoc_rl/: __init__.py  config.py  environment.py  rewards.py  run_context.py  tool_wrappers.py
tests/: _helpers.py  conftest.py  test_aoc_prime_env.py  test_aoc_rl.py  test_aoc_rl_environment.py  test_aoc_rl_prime_cli.py  test_aoc_rl_prime_env.py  test_aoc_rl_rewards.py  test_execute_timeout.py  test_execute_truncation.py  test_execution_sandbox.py  test_models.py  test_settings_offline.py  test_submit_streak.py
training/: README.md
(+74 files in other folders)
