[project]
name = "aoc-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
	"beautifulsoup4>=4.14.3",
	"httpx>=0.28.1",
	"pydantic-ai>=1.26.0",
	"typer>=0.20.0",
]

[project.scripts]
aoc-agent = "aoc_agent.agent:main"

[dependency-groups]
dev = ["pre-commit>=4.5.0", "ruff>=0.14.7"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"W191",
	"D100",
	"D101",
	"D102",
	"D103",
	"D104",
	"D107",
	"TRY003",
	"D203",
	"D213",
	"COM812",
	"EM101",
	"T201",
]

[tool.ruff.lint.isort]
known-first-party = ["aoc_agent"]

[tool.uv]
package = true
