[project]
name = "aoc-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
	"beautifulsoup4>=4.14.3",
	"httpx>=0.28.1",
	"ipykernel>=7.1.0",
	"jupyter-client>=8.7.0",
	"logfire>=3.2.0",
	"pydantic-ai>=1.26.0",
	"pyyaml>=6.0.3",
	"rich>=14.2.0",
	"typer>=0.20.0",
]

[project.scripts]
aoc-agent = "aoc_agent.agent:main"

[dependency-groups]
dev = [
	"pre-commit>=4.5.0",
	"pytest-asyncio>=1.2.0",
	"pytest>=8.4.0",
	"ruff>=0.14.7",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"W191",
	"D",
	"TRY003",
	"COM812",
	"EM101",
	"TC002",
	"TC006",
	"T201",
	"FBT001",
	"FBT002",
]

[tool.ruff.lint.isort]
known-first-party = ["aoc_agent"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["INP001", "PLR2004", "S101", "ARG005"]
"src/aoc_agent/agent.py" = ["PT028"]

[tool.uv]
package = true
