[project]
name = "aoc-prime-env"
description = "AoC Prime RL environment"
version = "0.1.1"
requires-python = ">=3.12"
tags = ["tool-use", "code", "train", "eval"]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets",
    "huggingface_hub>=0.34.0",
    "prime-sandboxes>=0.2.19",
    "pydantic>=2.12.0",
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["aoc_prime_env/**/*", "pyproject.toml", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["aoc_prime_env"]

[tool.verifiers.eval]
num_examples = 2
rollouts_per_example = 1
